# cody

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  package.json
.opencode/agent/: code-reviewer.md  oracle.md  rust-compilation-checker.md  rust-lint-fmt-orchestrator.md  rust-preflight-checker.md
.opencode/command/: code-review.md
.opencode/skill/cody-ui-tester/: SKILL.md
.opencode/skill/cody-ui-tester/references/commands/: README.md
.opencode/skill/cody-ui-tester/references/integration/: README.md
.opencode/skill/cody-ui-tester/references/troubleshooting/: README.md
llm/: .gitignore  download-opencode.ts  opencode-docs.json  opencode-types.ts
src/: actions.rs  app.rs  main.rs  opencode.rs  prompt_input.rs  theme.rs
src/backend/: README.md  db.rs  db_migrations.rs  db_old.rs  grpc.rs  harness.rs  local.rs  mod.rs  mutations.rs  opencode_client.rs  opencode_proc.rs  proto_utils.rs  query.rs  rpc.rs
src/backend/agent/: mod.rs  opencode.rs
src/backend/data/: README.md  mod.rs  project.rs  project_test.rs  proto_utils.rs  session.rs  session_test.rs
src/backend/db/: assistant_message_part_table.rs  assistant_message_table.rs  message_table.rs  migrations.rs  mod.rs  project_table.rs  session_table.rs  sqlite.rs  sqlite_test.rs  user_message_part_table.rs  user_message_table.rs
src/backend/db/sqlite/: assistant_message.rs  assistant_message_part.rs  message.rs  message_part.rs  messages.rs  mod.rs  project.rs  project_test.rs  projects.rs  session.rs  session_test.rs  sessions.rs  test.rs  user_message.rs  user_message_part.rs
src/backend/harness/: README.md  event_forwarder.rs  mod.rs  opencode.rs  opencode_client.rs
src/backend/models/: assistant_message_part_model.rs  message_model.rs  mod.rs  project_model.rs  session_model.rs  user_message_model.rs
src/backend/mutations/: mod.rs  project.rs  session.rs
src/backend/proto/: message.proto  project.proto  session.proto
src/backend/repo/: assistant_message.rs  message.rs  message_events.rs  message_part.rs  message_test.rs  mod.rs  project.rs  project_test.rs  session.rs  session_test.rs  test_utils.rs  user_message.rs  user_message_part.rs
src/backend/service/: message.rs  message_test.rs  mod.rs  mod_test.rs  project.rs  project_test.rs  session.rs  session_test.rs  test_helpers.rs
src/backend/state/: README.md  entity.rs  grouped.rs  mod.rs
src/components/: button.rs  dir_button.rs  directory_picker.rs  mod.rs  model_selector.rs  project_card.rs  text_input.rs
src/live_query/: mod.rs  projects.rs  sessions.rs  store.rs
src/mutations/: message.rs  mod.rs  project.rs  session.rs
src/pages/: mod.rs  project.rs  projects.rs  session.rs  sessions.rs
src/pages/project/: session_tab.rs
src/query/: message.rs  mod.rs  project.rs  session.rs
src/sync_engine/: README.md  mod.rs  projects.rs  sessions.rs  store.rs
tests/: ui_tester_client.ts
