[package]
name = "cody"
version = "0.1.0"
edition = "2024"

[features]
default = []
local = ["dioxus-devtools", "dep:subsecond"]
browser = []

[dependencies]
anyhow = "1.0.100"
dioxus-devtools = { version = "0.7", optional = true, features = ["serve"] }
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
subsecond = { version = "0.7", optional = true }
egui-dropdown = "0.14.0"
egui_flex = "0.5.0"
egui_inbox = "0.10.0"
log = "0.4"
reqwest = { version = "0.13.1", features = ["json", "stream", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
eventsource-stream = "0.2.3"
futures = "0.3"
egui_kittest = { version = "0.33.3", features = ["snapshot", "wgpu"] }
tarpc = { version = "0.37.0", features = ["tokio1"] }
uuid = { version = "1.20.0", features = ["v4", "js", "serde"] }
egui_form = { version = "0.7.0", features = ["validator_garde"] }
garde = { version = "0.22", features = ["derive"] }
crossbeam-channel = "0.5.15"
egui-phosphor = "0.11.0"
egui_extras = { version = "0.33.3", features = ["image", "svg"] }
egui_dock = "0.18.0"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
libc = "0.2.180"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "uuid"] }
rusqlite_migration = "2.4.1"
rfd = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "io-util"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
