[package]
name = "cody"
version = "0.1.0"
edition = "2024"

[features]
default = []
local = ["dioxus-devtools", "dep:subsecond"]

[dependencies]
anyhow = "1.0.100"
dioxus-devtools = { version = "0.7", optional = true, features = ["serve"] }
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
subsecond = { version = "0.7", optional = true }
egui_flex = "0.5.0"
egui_inbox = "0.10.0"
log = "0.4"
reqwest = { version = "0.13.1", features = ["json", "stream", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
eventsource-stream = "0.2.3"
futures = "0.3"
egui_kittest = { version = "0.33.3", features = ["snapshot", "wgpu"] }
uuid = { version = "1.20.0", features = ["v4", "js", "serde"] }
egui_form = { version = "0.7.0", features = ["validator_garde"] }
garde = { version = "0.22", features = ["derive"] }
egui-phosphor = "0.11.0"
egui_extras = { version = "0.33.3", features = ["image", "svg"] }
egui_dock = "0.18.0"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.8"
libc = "0.2.180"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite_migration = "2.3.0"
rfd = "0.17"
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio-rusqlite = { version = "0.7.0", features = ["bundled", "chrono", "uuid"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
